tests/baselines/reference/parseErrorDoubleCommaInCall.errors.txt
tests/cases/compiler/parseErrorDoubleCommaInCall.ts(2,10): error TS1136: Property assignment expected.


==== tests/cases/compiler/parseErrorDoubleCommaInCall.ts (1 errors) ====
    Boolean({
        x: 0,,
             ~
!!! error TS1136: Property assignment expected.
    });
    